--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "Title of the game",
-  "description": "Description of the game, including controls and optional extras for Coil subscribers if you participate in the Web Monetization category.",
+  "name": "Backshot Tactics",
+  "description": "Pick your ships and try to destroy opponent ships\n\n- 1 VS 1 tactical game \n- Multiplayer online \n- Elo based rankings \n- Play VS a bot \n\n",
   "images" : {
-    "image_large": "image-big.jpg",
-    "image_thumbnail": "image-small.jpg"
+    "image_large": "screenshots/big.png",
+    "image_thumbnail": "screenshots/small.png"
   },
-  "categories": ["Desktop", "Mobile", "Server", "Web Monetization", "WebXR"],
+  "categories": ["Desktop", "Mobile", "Server"],
   "user" : {
-    "name": "optional",
-    "website": "optional",
-    "twitter": "optional"
+    "name": "Antonio Salvati",
+    "website": "https://salvan13.github.io/",
+    "twitter": "salvan13"
   }
 }
